--- a/app/globals.css
+++ b/app/globals.css
@@ -1,42 +1,27 @@
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
-}
-
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
 * {
-  box-sizing: border-box;
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
+  transition: all 0.2s;
 }
 
 a {
-  color: inherit;
   text-decoration: none;
+  color: black;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+:root {
+  --white: #FBFBFB;
+  --white-blue: #C4D9FF;
+  --gray-blue: #9AA6B2;
+  --dark-blue: #789DBC;
+  --pink: #FFCCE1;
+  --dark-pink: #c58fa6;
+  --white-pink: #fff3f6;
+  --gray: #6E7780;
+  --turquoise: #B3C8CF;
+  --dark-turqoise: #5b666a;
+  --dark: #1b1d20;
+  --button-white-blue: #cce3f8;
+  --text-blue: #3d4247;
 }
