--- a/app/cryptocurrency/[id]/page.module.css
+++ b/app/cryptocurrency/[id]/page.module.css
@@ -29,5 +29,5 @@
     border-top: 3px solid var(--dark-turqoise);
     background-color: var(--turquoise);
     grid-row: -1 / -2;
-    font-size: ;
+    font-size: 20px;
 }
